--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
+    "sequelize": "^6.37.1",
+    "sequelize-cli": "^6.6.2",
     "tqdm": "^2.0.3"
   },
   "devDependencies": {
